fix: searchbar alignment

--- a/frontend/src/src/components/search-bar/index.css
+++ b/frontend/src/src/components/search-bar/index.css
@@ -1,6 +1,6 @@
 .search-bar {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin-top: 20px;
 }
 
